# ChangeLog for dev-dotnet/ipod-sharp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ipod-sharp/ChangeLog,v 1.12 2007/08/15 23:57:32 dertobi123 Exp $

  15 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  ipod-sharp-0.6.3.ebuild:
  ppc stable, bug #185631

  30 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  ipod-sharp-0.6.3.ebuild:
  stable x86, bug 185631

*ipod-sharp-0.6.3 (17 Jul 2007)

  17 Jul 2007; <metalgod@gentoo.org> -ipod-sharp-0.5.16.ebuild,
  -ipod-sharp-0.6.2.ebuild, +ipod-sharp-0.6.3.ebuild:
  Version Bump. Closes Bug #178814. Removed older versions.

*ipod-sharp-0.6.2 (19 Sep 2006)

  19 Sep 2006; Luis Medinas <metalgod@gentoo.org> +ipod-sharp-0.6.2.ebuild:
  Version Bump.

*ipod-sharp-0.5.16 (03 Jun 2006)

  03 Jun 2006; Luis Medinas <metalgod@gentoo.org> +ipod-sharp-0.5.16.ebuild:
  Version Bump from upstream that contains a fix for bug #134707.

  08 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  ipod-sharp-0.5.15.ebuild:
  Added to ~ppc, bug #115865

*ipod-sharp-0.5.15 (13 Feb 2006)

  13 Feb 2006; Luis Medinas <metalgod@gentoo.org> +ipod-sharp-0.5.15.ebuild:
  Version Bump for Banshee 0.10.6.

  21 Jan 2006; Luis Medinas <metalgod@gentoo.org>
  ipod-sharp-0.5.11.1.ebuild, ipod-sharp-0.5.12.ebuild:
  Updated monodoc dependency to 1.1.8.

  02 Jan 2006; Luis Medinas <metalgod@gentoo.org> ipod-sharp-0.5.12.ebuild:
  This version needs >=mono-1.1.10. Thanks to Sanford Armstrong
  <sanfordarmstrong@gmail.com> for the report on bug #117453.

  07 Dec 2005; Herbie Hopkins <herbs@gentoo.org> ipod-sharp-0.5.12.ebuild:
  Marked ~amd64.

*ipod-sharp-0.5.12 (06 Dec 2005)

  06 Dec 2005; Luis Medinas <metalgod@gentoo.org> +ipod-sharp-0.5.12.ebuild:
  Version Bump.

*ipod-sharp-0.5.11.1 (27 Nov 2005)

  27 Nov 2005; Luis Medinas <metalgod@gentoo.org>
  +ipod-sharp-0.5.11.1.ebuild:
  New Package. This is a library needed to build Banshee. Thanks to all users