@@ -1,6 +1,9 @@
 # ChangeLog for dev-dotnet/njb-sharp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/njb-sharp/ChangeLog,v 1.11 2007/08/15 23:58:22 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/njb-sharp/ChangeLog,v 1.12 2007/08/24 03:25:02 metalgod Exp $
+
+  24 Aug 2007; <metalgod@gentoo.org> njb-sharp-0.3.0.ebuild:
+  Stable on amd64. Bug #185631.
 
   15 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   njb-sharp-0.3.0.ebuild:
