@@ -1,6 +1,9 @@
 # ChangeLog for dev-dotnet/ipod-sharp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ipod-sharp/ChangeLog,v 1.12 2007/08/15 23:57:32 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ipod-sharp/ChangeLog,v 1.13 2007/08/24 03:24:00 metalgod Exp $
+
+  24 Aug 2007; <metalgod@gentoo.org> ipod-sharp-0.6.3.ebuild:
+  Stable on amd64. Bug #185631.
 
   15 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   ipod-sharp-0.6.3.ebuild:
